@@ -11,6 +11,8 @@ Changelog
 
 - Add zopectl command for dumping content stats. [buchi]
 
+- Make filestorage (Data.fs) and blobstorage path for disk usage configurable. [buchi]
+
 
 1.3.0 (2023-04-04)
 ------------------
